# Dazzer

./: .gitignore  README.md  Testirovanie.docx  calibrator.py  calibrator.rs  config.py  config.rs  cov_test  cov_test.c.gcov  cov_test.gcda  cov_test.gcno  dict.txt  display_stats.py  error.rs  main.py  main.rs  mainik.py  mutator.py  mutator.rs  nx.html  output.txt  requirements.txt  utils.rs
???????? ?????????/: ???????????????? ??????????
Test_examples/: calc  cov_test  cov_test.c.gcov  cov_test.gcda  cov_test.gcno  cov_test_libfuzzer.c  coverage_test.c  error_prone.c  gg  go.mod  multithreading.c  pass_game  pass_game.c  several_tests_whitebox  several_tests_whitebox.c  several_tests_whitebox.gcda  several_tests_whitebox.gcno  time-11:06:50.092994:mut_type-ch_symb:cov-0.0  time-11:06:50.096620:mut_type-ch_symb:cov-0.0  time-11:06:50.098934:mut_type-length_ch:cov-0.0  time-11:06:50.100038:mut_type-xor:cov-0.0  time-11:06:50.102333:mut_type-length_ch:cov-0.0  time-11:06:50.103301:mut_type-interesting:cov-0.0  time-11:06:50.105560:mut_type-xor:cov-0.0  time-11:06:50.106548:mut_type-interesting:cov-0.0  time-11:06:50.109005:mut_type-interesting:cov-0.0  time-11:06:50.112414:mut_type-xor:cov-0.0  time-11:06:50.113536:mut_type-ch_symb:cov-0.0  time-11:06:50.116053:mut_type-length_ch:cov-0.0  time-11:06:50.117021:mut_type-ch_symb:cov-0.0  time-11:06:50.122544:mut_type-interesting:cov-0.0  time-11:06:50.127159:mut_type-length_ch:cov-0.0  (+2625 more)
dazzer-rs/: Cargo.toml  UI_FEATURES.md  run.sh  shell.nix
dazzer-rs/src/: app.rs  lib.rs  stats.rs  ui.rs
python-fuzzer/: config.py  (+4 more)
(+26 files in other folders)
