 [package]
 name = "dazzer-rs"
 version = "0.1.0"
 edition = "2021"

 [dependencies]
 anyhow = "1"
 thiserror = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_yaml = "0.9"
 toml = "0.8"
 once_cell = "1.19"
 parking_lot = "0.12"
 rand = "0.8"
 chrono = { version = "0.4", features = ["serde"] }
 regex = "1"
 indicatif = "0.17"
 owo-colors = "3"
 crossterm = "0.27"
 ratatui = "0.26"
 crossbeam-channel = "0.5"
 dashmap = "5"
 uuid = { version = "1", features = ["v4"] }
 clap = { version = "4", features = ["derive"] }
 serde_with = "3"

